Add administrator service registry APIs
